Fix button not vertically centered on iOS

--- a/src/components/LocationInput.module.css
+++ b/src/components/LocationInput.module.css
@@ -4,7 +4,7 @@
   margin-bottom: 1px;
   display: flex;
   align-items: center;
-  min-height: 4rem;
+  min-height: 4.1rem;
   padding: 0.8rem;
   position: relative;
 }
