--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -18,8 +18,11 @@
   border: 1px solid var(--body-bg);
   border-radius: var(--border-radius);
   background-color: var(--bg-color);
-  padding: 0.5rem;
   display: flex;
+  height: 2rem;
+  width: 2rem;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   right: 0.8rem;
   top: 50%;
